--- a/.github/workflows/random.yml
+++ b/.github/workflows/random.yml
@@ -40,21 +40,11 @@ jobs:
           git pull --rebase
       
       - name: Generate commits
+        env:
+          PYTHONPATH: /workspaces/wordcloud/src
         run: |
-          PYTHONPATH=/workspaces/wordcloud/src python3 << 'EOF'
-          from commit_generator.generator import CommitGenerator
-          import sys
-
-          def main():
-              generator = CommitGenerator()
-              num_commits = int(sys.argv[1]) if len(sys.argv) > 1 else 5
-              
-              for _ in range(num_commits):
-                  generator.create_commit(random.randint(1, 3))
-
-          if __name__ == "__main__":
-              main()
-          EOF
+          COMMIT_COUNT="${{ github.event.inputs.commit_count || '5' }}"
+          python -m commit_generator $COMMIT_COUNT
       
       - name: Push changes
         run: |
